[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-queue"
version = "0.0.1"
description = "CLI to keep track of videos in Youtube playlists"
keywords = ["yt-dlp", "YouTube"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "yt-dlp==2023.10.13",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Hendri Pretorius", email = "pretorh@gmail.com" },
]

[project.scripts]
yt-queue = "yt_queue:cli"

[project.optional-dependencies]
dev = [
    "build==1.0.3",
    "pylint==3.0.2",
    "pytest==7.4.3",
]

[project.urls]
"Homepage" = "https://github.com/pretorh/yt-queue"
"Bug Tracker" = "https://github.com/pretorh/yt-queue/issues"

[tool.setuptools.packages.find]
where = ["."]
