[build-system]
requires = ["setuptools>=78.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-queue"
description = "CLI to keep track of videos in Youtube playlists"
keywords = ["yt-dlp", "YouTube"]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Hendri Pretorius", email = "pretorh@gmail.com" },
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.scripts]
yt-queue = "yt_queue:cli"

[project.urls]
"Homepage" = "https://github.com/pretorh/yt-queue"
"Bug Tracker" = "https://github.com/pretorh/yt-queue/issues"

[tool.setuptools.dynamic]
version = {attr = "yt_queue.VERSION"}
dependencies = {file = "requirements.txt"}
optional-dependencies = {dev = {file = "requirements-dev.txt"}}

[tool.setuptools.packages.find]
where = ["."]
